# BibbleBytecode

./: CMakeLists.txt
include/BibbleBytecode/: _compatability.h  allocator_view.h  buffer.h  reader.h  writer.h
include/BibbleBytecode/module/: class.h  const_pool.h  field.h  function.h  method.h  module.h
src/: buffer.cpp  reader.cpp  writer.cpp
